--- a/index.html
+++ b/index.html
@@ -4,16 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Major+Mono+Display&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="/assets/style.css" />
-    <title>Weather Dashboard API</title>
+    <title>Weather Dashboard</title>
   </head>
   <body>
     <header class="jumbotron">
       <!-- Jumbotron -->
       <div class="p-5 text-center bg-light">
-        <h1 class="mb-3">Weather Dashboard API</h1>
+        <h1 class="mb-3">Weather Dashboard</h1>
         <p id="currentDate" class="lead"></p>
       </div>
     </header>
