--- a/index.html
+++ b/index.html
@@ -4,58 +4,82 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Major+Mono+Display&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="assets/style.css"/>
+    <link rel="stylesheet" href="assets/style.css" />
     <title>Weather Dashboard</title>
   </head>
+
   <body>
+    
     <header class="jumbotron">
-      <!-- Jumbotron -->
-      <div class="p-5 text-center bg-light">
+      <div class="p-5 text-center">
         <h1 class="mb-3">Weather Dashboard</h1>
         <p id="currentDate" class="lead"></p>
       </div>
     </header>
-
+    
     <div class="container-fluid">
-      <div class="row">
-        <div class="col-3">
+      <div class="row float-left">
+        <div class="col-3 mb-3">
+          <label>Enter a city:</label>
           <div class="search-content">
-            <form class="search-form" method="GET">
+            <form class="search-form">
               <input
-                class="search-input"
+                class="searchBox"
+                id="inputValue"  
                 type="text"
+                name="cityInput"
                 placeholder="Search location city, state..."
               />
-              <button class="searchBtn" type="button">
+              <button id="searchBtn">
                 <i class="fa fa-search"></i>
               </button>
             </form>
-          </div>
-          <!-- <h2 class="city">City Name, State</h2> 
-               <h2 class="currentDate">Current Date</h2> -->
-          <!-- maybe weather icon -->
         </div>
+        <!-- Search history to save locally -->
+        <div class="searchHistory"></div>
+
+      </div>
+      <div class="row">
         <div class="col-9">
-          <div id="currentWeather">
-            <h2 class="city">City Name, State</h2>
-            <p class="temperature">Temperature:</p>
-            <p class="humidity">Humidity:</p>
-            <p class="wind">Wind Speed:</p>
-            <p class="uvIndex">UV Index:</p>
-          </div>
+            <div class="container" id="currentWeather">
+              <h2 class="card-title">Current Weather Conditions</h2>
+              <h5 id="cityName" class="currentCity">City: </h5>
+              <p id="weatherDescription"></p>
+              <p id="temp">Temperature: </p>
+              <p id="humidity">Humidity: </p>
+              <p id="wind">Wind Speed: </p>
+              <p id="uvIndex">UV Index: </p>
+            </div>
+        </div>
+
+
+       <!-- 5-Day Forecast Info -->
+       <div class="row">
+        <div class="col-12">
+          <h3>5-Day Weather Forecast</h3>
         </div>
       </div>
-    </div>
 
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"
-      integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg=="
-      crossorigin="anonymous"
-    ></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-    <script src="assets/script.js"></script>
-  </body>
+      <div class="row forecastInfo">
+        <div class="col forecast"></div>
+        <div class="col forecast"></div>
+        <div class="col forecast"></div>
+        <div class="col forecast"></div>
+        <div class="col forecast"></div>
+      </div>
+
+      <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
+      <script src="assets/script.js"></script>
+  
+</body>
 </html>
+
+
