added to js, current weather and five day components

--- a/index.html
+++ b/index.html
@@ -45,32 +45,36 @@
       </div>
       <div class="row">
         <div class="col-9">
-            <div class="container" id="currentWeather">
+          <!-- Current weather card -->
+            <div id="currentWeather" class="container">
               <h2 class="card-title">Current Weather Conditions</h2>
-              <h5 id="cityName" class="currentCity">City: </h5>
-              <p id="weatherDescription"></p>
-              <p id="temp">Temperature: </p>
-              <p id="humidity">Humidity: </p>
-              <p id="wind">Wind Speed: </p>
-              <p id="uvIndex">UV Index: </p>
+              <h5 >City: <span id="currentCity"></span> </h5>
+              <!-- <p id="weatherDescription"></p> -->
+              <p>Temperature: <span id="temp"></span></p>
+              <p>Humidity: <span id="humidity"></span></p>
+              <p>Wind Speed: <span id="wind"></span></p>
+              <p>UV Index: <span id="uvIndex"></span></p>
             </div>
         </div>
 
 
        <!-- 5-Day Forecast Info -->
-       <div class="row">
-        <div class="col-12">
+       <div class="row col-12">
+        <div class="container">
           <h3>5-Day Weather Forecast</h3>
+          <div id="fiveDayContainers" class="container-fluid"></div>
         </div>
       </div>
 
-      <div class="row forecastInfo">
+      <!-- <div id="fiveDayContainers" class="container-fluid"></div> -->
+
+      <!-- <div class="row">
         <div class="col forecast"></div>
         <div class="col forecast"></div>
         <div class="col forecast"></div>
         <div class="col forecast"></div>
         <div class="col forecast"></div>
-      </div>
+      </div> -->
 
       <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
