added localStorage and working on saving to page

--- a/index.html
+++ b/index.html
@@ -39,8 +39,12 @@
               </button>
             </form>
         </div>
+
         <!-- Search history to save locally -->
-        <div class="searchHistory"></div>
+        <div id="citySearches" class="searchHistory">
+          <button id="searchHistoryBtn" class="searchHistoryBtn"></button>
+        </div>
+
 
       </div>
       <div class="row">
